log
Wed Mar 24 00:59:17 UTC 2021: 
 list.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:33:33: error: implicit declaration of function ‘sifeoz’; did you mean ‘feof’? [-Werror=implicit-function-declaration]
   List *list = (List *) malloc (sifeoz(List));
                                 ^~~~~~
                                 feof
list.c:33:40: error: expected expression before ‘List’
   List *list = (List *) malloc (sifeoz(List));
                                        ^~~~
cc1: all warnings being treated as errors
Compilation failed
Wed Mar 24 00:59:26 UTC 2021: 
 list.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b75a095
Wed Mar 24 00:59:42 UTC 2021: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|5
total_score: 10/70
798d543
Wed Mar 24 01:03:59 UTC 2021: 
 list.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
dbfe30b
Wed Mar 24 01:09:09 UTC 2021: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c5210a5
Wed Mar 24 01:24:36 UTC 2021: 
 list.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
9573ccf
Wed Mar 24 01:31:28 UTC 2021: 
 list.c | 22 +++++++++++-----------
 1 file changed, 11 insertions(+), 11 deletions(-)
 tests:  1|5
total_score: 10/70
72d5441
Wed Mar 24 01:31:44 UTC 2021: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
ddc6ef3
Wed Mar 24 01:35:04 UTC 2021: 
 list.c | 23 ++++++++++++++++++-----
 1 file changed, 18 insertions(+), 5 deletions(-)
 tests:  1|5
total_score: 10/70
ebc0159
Wed Mar 24 01:36:53 UTC 2021: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
921bdc6
Wed Mar 24 01:37:19 UTC 2021: 
 list.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  2|5
total_score: 15/70
02a3f0b
Wed Mar 24 01:37:33 UTC 2021: 
 list.c | 8 +-------
 1 file changed, 1 insertion(+), 7 deletions(-)
 tests:  2|5
total_score: 15/70
e720a8d
Wed Mar 24 01:38:07 UTC 2021: 
 list.c | 13 +++----------
 1 file changed, 3 insertions(+), 10 deletions(-)
 tests:  2|5
total_score: 15/70
2868161
Wed Mar 24 01:39:42 UTC 2021: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
8f54393
Wed Mar 24 01:41:23 UTC 2021: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
1821cc5
Wed Mar 24 01:43:51 UTC 2021: 
 list.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  2|5
total_score: 15/70
0e8e719
Wed Mar 24 01:50:11 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
5934e79
Wed Mar 24 01:54:08 UTC 2021: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  0|0
7a9696c
Wed Mar 24 01:55:07 UTC 2021: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
77b6de3
Wed Mar 24 01:55:52 UTC 2021: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|5
total_score: 15/70
fb70a29
Wed Mar 24 01:57:30 UTC 2021: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
d95bdf8
